# Elastos.SDK.DIDIoTClient

./: .gitignore  CMakeLists.txt  Elastos.SDK.DID.IOT.pc.in  Elastos.SDK.DIDIoTClient.pc.in  README.md
scripts/: build.sh  package-mobile.sh
src/: CMakeLists.txt  Elastos.SDK.DID.IOT.Api.cpp  Elastos.SDK.DID.IOT.Api.hpp  Elastos.SDK.DIDIoTClient.cpp  Elastos.SDK.DIDIoTClient.hpp  HttpGet.cpp  HttpPost.cpp
src/test/: DidApiTest.cpp
